[gd_scene load_steps=4 format=3 uid="uid://moon_tears_001"]

[ext_resource type="Script" path="res://game/features/minigames/moon_tears_minigame.gd" id="1_script"]
[ext_resource type="Texture2D" path="res://assets/sprites/placeholders/moon_tears_stars.png" id="2_stars"]
[ext_resource type="Texture2D" path="res://assets/sprites/placeholders/moon_tears_moon.png" id="3_moon"]

[node name="MoonTearsMinigame" type="Control"]
script = ExtResource("1_script")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2(0.1, 0.1)

[node name="Stars" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer"]
texture = ExtResource("2_stars")

[node name="ParallaxLayer2" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2(0.3, 0.3)

[node name="Moon" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer2"]
texture = ExtResource("3_moon")

[node name="TearContainer" type="Node2D" parent="."]

[node name="PlayerMarker" type="ColorRect" parent="."]
custom_minimum_size = Vector2(40, 10)
size = Vector2(40, 10)
color = Color(0.9, 0.95, 1, 1)

[node name="CaughtCounter" type="Label" parent="."]
anchor_left = 0.05
anchor_top = 0.05
anchor_right = 0.5
anchor_bottom = 0.1
text = "Tears: 0/3"

[node name="TearParticles" type="GPUParticles2D" parent="."]
